--- a/src/Compoents/PromptEditor/Components/PromptItem/subType.scss
+++ b/src/Compoents/PromptEditor/Components/PromptItem/subType.scss
@@ -15,5 +15,9 @@
         --bk: linear-gradient(#844444, #7c6c6c);
         --bk-desc: linear-gradient(#da4927, #c78a6e);
     }
+    &.subType-negative {
+        --bk: linear-gradient(#7a5545, #8b6e69);
+        --bk-desc: linear-gradient(#b2716f, #e34848);
+    }
 
 }
